# mangos-luascript

./: ProjectHome.md
src/bindings/luascript/: CppScriptMgr.cpp  CppScriptMgr.h  How to run it.txt  LUA_Engine.cpp  LUA_Player.cpp  Lua_AI.cpp  Lua_AI.h  Lua_Creature.cpp  Lua_Unit.cpp  Lua_Unit.h  Lua_exports.cpp  Lua_exports.h  Lua_uint64.cpp  Makefile.am  Makefile.in  ScriptMgr.cpp  ScriptMgr.h  TODO.txt  lua++.h  luainc.h  luascript.vcproj  lunar.h
src/bindings/luascript/cpp-scripts/custom/: sc_skorn_whitecloud.cpp
src/bindings/luascript/cpp-scripts/guards/: sc_guard_elwynnforest.cpp  sc_guard_ironforge.cpp  sc_guard_stormwind.cpp  sc_guard_tirisfal.cpp
src/bindings/luascript/cpp-scripts/serveus/: sc_battlemaster.cpp  sc_travelmaster.cpp
src/bindings/luascript/lua/: Makefile
src/bindings/luascript/lua-scripts/: Masterscript.lua  lua-scripts.sql
src/bindings/luascript/lua-scripts/LuaScript/: AI.lua  CallBacks.lua  Extension.lua  Mango.lua  ScriptMgr.lua  example.lua  sc_default.lua
src/bindings/luascript/lua-scripts/LuaScript/AIs/: default_ai.lua  sc_default_guard.lua  sc_tranquil_gardens.lua
src/bindings/luascript/lua-scripts/LuaScript/Mango/: Mango.DataStore.lua  Mango.IO.lua  Mango.Scripts.lua  Mango.Stubby.lua
src/bindings/luascript/lua-scripts/LuaScript/guards/: guard_stormwind.lua  guard_tirisfal.lua  (+12 more)
src/bindings/luascript/lua/lib/: lua5.lib
src/bindings/luascript/lua/win/: lua5.ncb  lua5.sln  lua5.vcproj
src/bindings/luascript/patches/: README.txt  patch_hack_for_loadscripts.txt
src/bindings/luascript/sql/: cpp-scripts.sql  lua-scripts.sql
(+66 files in other folders)
